Updated examples with values_gridded and x0_gridded

--- a/examples/4-era5-data-download.ipynb
+++ b/examples/4-era5-data-download.ipynb
@@ -126,8 +126,7 @@
    "outputs": [],
    "source": [
     "# Convert each timestep back to 2D\n",
-    "gridded_values = aws_loader.to_original_dim()\n",
-    "print(gridded_values.shape)"
+    "print(aws_loader.values_gridded.shape)"
    ]
   },
   {
@@ -140,10 +139,10 @@
     "# Now let's compare air temp in January vs June over Colorado\n",
     "fig, ax = plt.subplots(1, 2)\n",
     "fig.suptitle('Air Temp at 2 Metres (K), Colorado')\n",
-    "ax[0].imshow(gridded_values[12], vmin=250, vmax=300)\n",
+    "ax[0].imshow(aws_loader.values_gridded[12], vmin=250, vmax=300)\n",
     "ax[0].set_title(np.datetime_as_string(aws_loader.times[12], unit='h')); ax[0].set_xlabel('Longitude'); ax[0].set_ylabel('Latitude')\n",
     "ax[0].set_yticks(ticks=[0, 5, 10, 15], labels=[37, 38.25, 39.5, 40.75]); ax[0].set_xticks(ticks=[0, 10, 20], labels=[-109, -106.5, -104])\n",
-    "ax[1].imshow(gridded_values[3660], vmin=250, vmax=300)\n",
+    "ax[1].imshow(aws_loader.values_gridded[3660], vmin=250, vmax=300)\n",
     "ax[1].set_title(np.datetime_as_string(aws_loader.times[3660], unit='h')); ax[1].set_xlabel('Longitude'); ax[1].set_ylabel('Latitude')\n",
     "ax[1].set_yticks(ticks=[0, 5, 10, 15], labels=[37, 38.25, 39.5, 40.75]); ax[1].set_xticks(ticks=[0, 10, 20], labels=[-109, -106.5, -104])\n",
     "fig.tight_layout()\n",
@@ -198,17 +197,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef112e19",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cuba_grid_vals = cuba_loader.to_original_dim()\n",
-    "print(cuba_grid_vals.shape) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "82041f5d",
    "metadata": {},
    "outputs": [],
@@ -216,9 +204,9 @@
     "# Now let's plot sea surface temp and pressure next to each other in July\n",
     "fig, ax = plt.subplots(1, 2)\n",
     "fig.suptitle('Sea Surface Pressure and Temp, Cuba in June 1979')\n",
-    "ax[0].imshow(cuba_grid_vals[4404, :, :, 0])\n",
+    "ax[0].imshow(cuba_loader.values_gridded[4404, :, :, 0])\n",
     "ax[0].set_title('Pressure, ' + np.datetime_as_string(cuba_loader.times[4404], unit='h')); ax[0].set_xlabel('x'); ax[0].set_ylabel('y')\n",
-    "ax[1].imshow(cuba_grid_vals[4404, :, :, 1])\n",
+    "ax[1].imshow(cuba_loader.values_gridded[4404, :, :, 1])\n",
     "ax[1].set_title('Temperature, ' + np.datetime_as_string(cuba_loader.times[4404], unit='h')); ax[1].set_xlabel('x'); ax[1].set_ylabel('y')\n",
     "fig.tight_layout()\n",
     "fig.subplots_adjust(top=1.4)\n",
