--- a/examples/5-load-any-netcdf.ipynb
+++ b/examples/5-load-any-netcdf.ipynb
@@ -49,7 +49,9 @@
     "\n",
     "When loading data from a netCDF, we use the dabench.data.Data class.\n",
     "\n",
-    "Once we define our data object, it's as easy as using the .load_netcdf() method with a specific path."
+    "Once we define our data object, it's as easy as using the .load_netcdf() method with a specific path.\n",
+    "\n",
+    "NOTE: This is a work in progress. Depending on the format of the NetCDF, loading may not work. If you run into issues, open a github issue and we can update the code so that the method loads your NetCDF: https://github.com/StevePny/DataAssimBench/issues"
    ]
   },
   {
@@ -104,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gridded_vals = data_obj.to_original_dim()"
+    "print(data_obj.values_gridded.shape)"
    ]
   },
   {
@@ -116,10 +118,10 @@
    "source": [
     "# Plot December 2001 vs September 2002\n",
     "fig, ax = plt.subplots(1, 2)\n",
-    "ax[0].imshow(gridded_vals[11],  vmin=271, vmax=305)\n",
+    "ax[0].imshow(data_obj.values_gridded[11],  vmin=271, vmax=305)\n",
     "ax[0].set_title('Dec, 2001')\n",
     "ax[0].set_xlabel('x'); ax[0].set_ylabel('y')\n",
-    "ax[1].imshow(gridded_vals[20],  vmin=271, vmax=305)\n",
+    "ax[1].imshow(data_obj.values_gridded[20],  vmin=271, vmax=305)\n",
     "ax[1].set_title('September, 2002')\n",
     "ax[1].set_xlabel('x'); ax[1].set_ylabel('y')\n",
     "fig.tight_layout()\n",
