Update ETKF RC example with integrated RC into dab, small comment cleanups for 4dBackprop

--- a/examples/da_cycler/4-4DBackprop-Lorenz96-ReservoirComputing.ipynb
+++ b/examples/da_cycler/4-4DBackprop-Lorenz96-ReservoirComputing.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_size = 20000 #100000\n",
+    "train_size = 20000 \n",
     "transient_size = 1000\n",
     "test_size = 2000"
    ]
