Save/load weights from out/qgs

--- a/examples/da_cycler/5B-Var4DBackprop-QGS-FullRun.ipynb
+++ b/examples/da_cycler/5B-Var4DBackprop-QGS-FullRun.ipynb
@@ -274,7 +274,7 @@
     "# # Train: Takes a few minutes\n",
     "# forecast_model.weights_init()\n",
     "# forecast_model.train(nr_train)\n",
-    "# forecast_model.save_weights('rc_weights.pkl')"
+    "# forecast_model.save_weights('./out/qgs/rc_weights.pkl')"
    ]
   },
   {
@@ -285,7 +285,7 @@
    "outputs": [],
    "source": [
     "# # Shortcut: load the W_out weights from previous training\n",
-    "weights_path = 'rc_weights.pkl'\n",
+    "weights_path = './out/qgs/rc_weights.pkl'\n",
     "forecast_model.weights_init()\n",
     "forecast_model.load_weights(weights_path)"
    ]
