--- a/examples/da_cycler/5A-Var4DBackprop-QGS-RayTune.ipynb
+++ b/examples/da_cycler/5A-Var4DBackprop-QGS-RayTune.ipynb
@@ -278,7 +278,7 @@
     "# # # Train: Takes a few minutes\n",
     "# forecast_model.weights_init()\n",
     "# forecast_model.train(nr_train)\n",
-    "# forecast_model.save_weights('rc_weights.pkl')"
+    "# forecast_model.save_weights('./out/qgs/rc_weights.pkl')"
    ]
   },
   {
@@ -289,7 +289,7 @@
    "outputs": [],
    "source": [
     "# Shortcut: load the W_out weights from previous training\n",
-    "weights_path = 'rc_weights.pkl'\n",
+    "weights_path = './out/qgs/rc_weights.pkl'\n",
     "forecast_model.weights_init()\n",
     "forecast_model.load_weights(weights_path)"
    ]
