Small wording updates to  l96 notebooks

--- a/examples/da_cycler/6A-Var4d-vs-Var4dBackprop-Lorenz96-RayTune.ipynb
+++ b/examples/da_cycler/6A-Var4d-vs-Var4dBackprop-Lorenz96-RayTune.ipynb
@@ -9,7 +9,6 @@
    "source": [
     "import dabench as dab\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import jax\n",
     "from timeit import default_timer as timer\n",
     "import pandas as pd\n",
@@ -34,7 +33,7 @@
    "id": "31e854ed",
    "metadata": {},
    "source": [
-    "# Define some parameters"
+    "# Define parameters"
    ]
   },
   {
