--- a/examples/da_cycler/6B-Var4d-vs-Var4dBackprop-Lorenz96-FullRun.ipynb
+++ b/examples/da_cycler/6B-Var4d-vs-Var4dBackprop-Lorenz96-FullRun.ipynb
@@ -9,7 +9,6 @@
    "source": [
     "import dabench as dab\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import jax\n",
     "from timeit import default_timer as timer\n",
     "import pandas as pd\n",
@@ -66,7 +65,7 @@
    "id": "31e854ed",
    "metadata": {},
    "source": [
-    "### Define some parameters"
+    "### Define parameters"
    ]
   },
   {
@@ -89,7 +88,7 @@
     "analysis_window = 0.1\n",
     "analysis_time_in_window = 0.05\n",
     "obs_location_count = 18\n",
-    "num_epochs = 3\n",
+    "num_iters = 3\n",
     "n_outer_loops = 3\n",
     "num_runs = 50"
    ]
@@ -451,7 +450,7 @@
     "            analysis_window=analysis_window,\n",
     "            analysis_time_in_window=analysis_time_in_window,\n",
     "            random_seed=random_seed,\n",
-    "            num_epochs=num_epochs,\n",
+    "            num_iters=num_iters,\n",
     "            learning_rate=learning_rate,\n",
     "            lr_decay = lr_decay)\n",
     "        \n",
@@ -464,7 +463,7 @@
     "        out_dict_list_bp.append(run_dict)\n",
     "        \n",
     "bp_df_time =  pd.DataFrame(out_dict_list_bp)\n",
-    "bp_df_time.to_csv('./out/l96/bp_df_time_v33_withraytune_hessian_epochs3_val.csv')"
+    "bp_df_time.to_csv('./out/l96/bp_df_time_v33_withraytune_hessian_iters3_val.csv')"
    ]
   },
   {
@@ -537,7 +536,7 @@
     "out_dict_list_bp_obs = []\n",
     "\n",
     "num_runs = 1\n",
-    "num_epochs=3\n",
+    "num_iters=3\n",
     "system_dim = 36\n",
     "random_seed = system_dim\n",
     "num_obs_list = [6, 12, 18, 24, 30, 36]\n",
@@ -568,7 +567,7 @@
     "                analysis_window=analysis_window,\n",
     "                analysis_time_in_window=analysis_time_in_window,\n",
     "                random_seed=random_seed,\n",
-    "                num_epochs=num_epochs,\n",
+    "                num_iters=num_iters,\n",
     "                learning_rate=learning_rate,\n",
     "                lr_decay=lr_decay)\n",
     "            \n",
@@ -704,7 +703,7 @@
     "            analysis_window=analysis_window,\n",
     "            analysis_time_in_window=analysis_time_in_window,\n",
     "            random_seed=random_seed,\n",
-    "            num_epochs=num_epochs,\n",
+    "            num_iters=num_iters,\n",
     "            learning_rate=learning_rate,\n",
     "            lr_decay = lr_decay)\n",
     "        \n",
@@ -717,7 +716,7 @@
     "        out_dict_list_bp.append(run_dict)\n",
     "        \n",
     "bp_df_time =  pd.DataFrame(out_dict_list_bp)\n",
-    "bp_df_time.to_csv('./out/l96/bp_df_time_v33_withraytune_hessian_epochs3_test.py')"
+    "bp_df_time.to_csv('./out/l96/bp_df_time_v33_withraytune_hessian_iters3_test.py')"
    ]
   },
   {
@@ -817,7 +816,7 @@
     "                analysis_window=analysis_window,\n",
     "                analysis_time_in_window=analysis_time_in_window,\n",
     "                random_seed=random_seed,\n",
-    "                num_epochs=num_epochs,\n",
+    "                num_iters=num_iters,\n",
     "                learning_rate=learning_rate,\n",
     "                lr_decay=lr_decay)\n",
     "            \n",
@@ -1046,7 +1045,7 @@
     "    analysis_window=analysis_window,\n",
     "    analysis_time_in_window=analysis_time_in_window,\n",
     "    random_seed=random_seed,\n",
-    "    num_epochs=num_epochs,\n",
+    "    num_iters=num_iters,\n",
     "    learning_rate=learning_rate,\n",
     "    lr_decay=lr_decay)\n",
     "\n",
