--- a/examples/da_cycler/6B-Var4d-vs-Var4dBackprop-Lorenz96-FullRun.ipynb
+++ b/examples/da_cycler/6B-Var4d-vs-Var4dBackprop-Lorenz96-FullRun.ipynb
@@ -110,12 +110,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_backprop_4dvar(system_dim, nr_steps, spinup_size, valid_size, test_size, \n",
+    "def run_backprop_4dvar(system_dim, nr_steps, spinup_size, valid_size, transient_size, test_size, \n",
     "                       test_run, delta_t, obs_location_count, obs_sd, sigma_bg, \n",
     "                       sigma_obs, analysis_window, analysis_time_in_window, \n",
     "                       random_seed, num_iters, learning_rate, lr_decay):\n",
     "    np_rng = np.random.default_rng(random_seed)\n",
-    "    jax.clear_backends()\n",
+    "    jax.clear_caches()\n",
     "\n",
     "    ### Nature Run\n",
     "    nature_run = dab.data.Lorenz96(system_dim=system_dim, delta_t=delta_t,\n",
@@ -233,7 +233,7 @@
     "              test_size, delta_t, obs_location_count, obs_sd, sigma_bg, sigma_obs,\n",
     "              analysis_window, analysis_time_in_window, random_seed, n_outer_loops):\n",
     "    np_rng = np.random.default_rng(random_seed)\n",
-    "    jax.clear_backends()\n",
+    "    jax.clear_caches()\n",
     "\n",
     "    ### Nature Run\n",
     "    nature_run = dab.data.Lorenz96(system_dim=system_dim, delta_t=delta_t,\n",
@@ -356,7 +356,7 @@
     "                test_size, delta_t, obs_location_count, obs_sd, sigma_bg, sigma_obs,\n",
     "                analysis_window, analysis_time_in_window, random_seed):\n",
     "    np_rng = np.random.default_rng(random_seed)\n",
-    "    jax.clear_backends()\n",
+    "    jax.clear_caches()\n",
     "\n",
     "\n",
     "    ### Nature Run\n",
@@ -527,9 +527,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f363dd14",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Backprop 4D Var w/ Approximate Hessian\n",
@@ -1067,9 +1065,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dab-installed",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "dab-installed"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1081,7 +1079,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
