Update kernelspec for era5 data download, add note that it's not currently functional

--- a/examples/data_generators/4-era5-data-download.ipynb
+++ b/examples/data_generators/4-era5-data-download.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "bbec98e7-540d-4f73-9c2a-6eb1e31ab4b2",
+   "metadata": {},
+   "source": [
+    "NOTE: AWS deprecated ERA5 data, and so this notebook no longer works. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d6e78334",
    "metadata": {},
    "source": [
@@ -483,9 +491,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dab-installed",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "dab-installed"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -497,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
