Updated QGS backprop

--- a/examples/da_cycler/5A-Var4DBackprop-QGS-RayTune.ipynb
+++ b/examples/da_cycler/5A-Var4DBackprop-QGS-RayTune.ipynb
@@ -344,7 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def raytune_v4d_bp_valid(config, num_epochs, H, B, R, \n",
+    "def raytune_v4d_bp_valid(config, num_iters, H, B, R, \n",
     "                         delta_t, forecast_model, r0_original,\n",
     "                         nr, obs_vec, sigma_obs):\n",
     "    \n",
@@ -356,7 +356,7 @@
     "    R=R,\n",
     "    learning_rate=config['lr'],\n",
     "    lr_decay=config['lr_decay'],\n",
-    "    num_epochs=num_epochs,\n",
+    "    num_iters=num_iters,\n",
     "    model_obj=forecast_model,\n",
     "    obs_window_indices=[0,2,5,8],\n",
     "    steps_per_window=10, # 10 instead of 9 because inclusive of start and end\n",
@@ -400,7 +400,7 @@
     "    \"lr\": hp.loguniform(\"lr\", -10, 0),\n",
     "    \"lr_decay\": hp.uniform(\"lr_decay\", 0.1, 0.99),\n",
     "}\n",
-    "num_epochs = 3"
+    "num_iters = 3"
    ]
   },
   {
@@ -410,9 +410,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainable_w_num_epochs = tune.with_parameters(raytune_v4d_bp_valid, \n",
+    "trainable_w_num_iters = tune.with_parameters(raytune_v4d_bp_valid, \n",
     "                                              delta_t=nature_run.delta_t,\n",
-    "                                              num_epochs=num_epochs,\n",
+    "                                              num_iters=num_iters,\n",
     "                                              H=H,\n",
     "                                              B=B,\n",
     "                                              R=R,\n",
@@ -5575,7 +5575,7 @@
    "source": [
     "hyperopt_search = HyperOptSearch(space, metric=\"rmse\", mode=\"min\")\n",
     "tuner = tune.Tuner(\n",
-    "    trainable_w_num_epochs,\n",
+    "    trainable_w_num_iters,\n",
     "    tune_config=tune.TuneConfig(\n",
     "        num_samples=50,\n",
     "        max_concurrent_trials=1,\n",
@@ -5586,7 +5586,7 @@
     "\n",
     "cur_results_df = results.get_dataframe()\n",
     "\n",
-    "cur_results_df['num_epochs'] = num_epochs"
+    "cur_results_df['num_iters'] = num_iters"
    ]
   },
   {
