Remove AWS message in load netcdf example (wrong notebook)

--- a/examples/data_generators/5-load-any-netcdf.ipynb
+++ b/examples/data_generators/5-load-any-netcdf.ipynb
@@ -2,14 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "10c12b78-ad3e-4285-a7e2-d919910e497e",
-   "metadata": {},
-   "source": [
-    "NOTE: AWS deprecated ERA5 data, and so this notebook no longer works. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "db81e356",
    "metadata": {},
    "source": [
@@ -47,7 +39,7 @@
     {
      "data": {
       "text/plain": [
-       "('./tos_01_2001-2002.nc', <http.client.HTTPMessage at 0x7fdff1d10950>)"
+       "('./tos_01_2001-2002.nc', <http.client.HTTPMessage at 0x7f9a9810c190>)"
       ]
      },
      "execution_count": 2,
