--- a/examples/da_cycler/6A-Var4d-vs-Var4dBackprop-Lorenz96-RayTune.ipynb
+++ b/examples/da_cycler/6A-Var4d-vs-Var4dBackprop-Lorenz96-RayTune.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "04bc5ea0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'dabench'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mdabench\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mdab\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjax\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'dabench'"
+     ]
+    }
+   ],
    "source": [
     "import dabench as dab\n",
     "import numpy as np\n",
@@ -272,12 +284,12 @@
     "                                                     )\n",
     "    \n",
     "    # Not running in parallel to get fairer time comparison against regular 4DVar\n",
-    "    trainable_with_resources = tune.with_resources(trainable_with_system_dim, {\"cpu\": 16})\n",
     "    hyperopt_search = HyperOptSearch(space, metric=\"rmse\", mode=\"min\")\n",
     "    tuner = tune.Tuner(\n",
-    "        trainable_with_resources,\n",
+    "        trainable_with_system_dim,\n",
     "        tune_config=tune.TuneConfig(\n",
     "            num_samples=50,\n",
+    "            max_concurrent_trials=4,\n",
     "            search_alg=hyperopt_search,\n",
     "        ),\n",
     "    )\n",
@@ -346,13 +358,13 @@
     "                                                         num_obs=obs_location_count,\n",
     "                                                         obs_sd=obs_sd\n",
     "                                                         )\n",
-    "        trainable_with_resources = tune.with_resources(trainable_with_system_dim, {\"cpu\": 4})\n",
     "\n",
     "        hyperopt_search = HyperOptSearch(space, metric=\"rmse\", mode=\"min\")\n",
     "        tuner = tune.Tuner(\n",
-    "            trainable_with_resources,\n",
+    "            trainable_with_system_dim,\n",
     "            tune_config=tune.TuneConfig(\n",
     "                num_samples=20,\n",
+    "                max_concurrent_trials=4,\n",
     "                search_alg=hyperopt_search,\n",
     "            ),\n",
     "        )\n",
@@ -397,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
