Add sqgturb to observer example and add examples using location and time counts instead of probs

--- a/examples/observers/1-observers-example-usage.ipynb
+++ b/examples/observers/1-observers-example-usage.ipynb
@@ -7,8 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dabench\n",
-    "from dabench import data, vector, observer\n",
+    "import dabench as dab\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
    ]
@@ -18,7 +17,7 @@
    "id": "08132851",
    "metadata": {},
    "source": [
-    "# 1. Basic stationary observer with random sampling"
+    "# 1. Basic stationary observer with random sampling by *count*"
    ]
   },
   {
@@ -36,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l63 = data.Lorenz63()\n",
+    "l63 = dab.data.Lorenz63()\n",
     "l63.generate(n_steps=50)"
    ]
   },
@@ -48,10 +47,10 @@
    "outputs": [],
    "source": [
     "# Now we can define the observer:\n",
-    "obs_l63 = observer.Observer(\n",
+    "obs_l63 = dab.observer.Observer(\n",
     "    l63, # Data generator object\n",
-    "    random_time_density = 0.5, # Probability of picking each time step for random sampling\n",
-    "    random_location_density = 0.5, # Probability of picking each location in l63.system_dim for random sampling\n",
+    "    random_time_count = 20, # Pick 20 timesteps for sampling\n",
+    "    random_location_count = 1, # Pick one location in the system for sampling\n",
     "    error_bias = 0.0, # Mean for observation error, Gaussian/Normal distribution\n",
     "    error_sd = 0.7, # Standard deviation for observation error, Gaussian/Normal distribution\n",
     "    random_seed=99 # We can specify a random seed. Default is 99\n",
@@ -71,7 +70,6 @@
     "# Let's examine that object\n",
     "print('Sampling times: ', obs_vec_l63.times)\n",
     "print('Number of observations: ', obs_vec_l63.num_obs)\n",
-    "# In this case, the entire system (3 values) was sampled at the specific timesteps\n",
     "print('Number of locations at each timestep: ', obs_vec_l63.obs_dims[0])\n",
     "print('Sampling location indices: ', obs_vec_l63.location_indices[0])\n",
     "print('Observation values: ', obs_vec_l63.values)"
@@ -86,7 +84,7 @@
    "source": [
     "# Let's examine how error is added to observations\n",
     "fig, ax = plt.subplots()\n",
-    "ax.plot(l63.times, l63.values[:, 0], alpha=0.9)\n",
+    "ax.plot(l63.times, l63.values[:, 1], alpha=0.9)\n",
     "ax.plot(obs_vec_l63.times, obs_vec_l63.values[:, 0], '--', alpha=0.9)\n",
     "obs_values_minus_error = obs_vec_l63.values - obs_vec_l63.errors\n",
     "ax.plot(obs_vec_l63.times, obs_values_minus_error[:, 0], ':', alpha=0.9)\n",
@@ -107,7 +105,7 @@
    "id": "b98fc359",
    "metadata": {},
    "source": [
-    "Last time, we let the observer randomly select locations and times to sample. But the observer also allows us to specify the location and time indices we want to observe. Let's explore that using a Lorenz96 generator."
+    "Last time, we let the observer randomly select locations and times to sample. But the observer also allows us to specify the location and time indices we want to observe. You can use this to, for example, sample every other time step or every 5th element in the state vector. It allows for complete customization. Let's explore that using a Lorenz96 generator."
    ]
   },
   {
@@ -117,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l96 = data.Lorenz96()\n",
+    "l96 = dab.data.Lorenz96()\n",
     "l96.generate(n_steps=100)\n",
     "print('Time dim: ', l96.time_dim)\n",
     "print('System dim: ', l96.system_dim)"
@@ -130,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Let's sample 5 different points in the system every 5th timestep\n",
+    "# Let's sample 5 different locations in the system every 5th timestep\n",
     "time_inds_l96 = np.arange(0, 100, 5)\n",
     "print(time_inds_l96)\n",
     "sys_inds_l96 = [5, 10, 20, 25, 35]"
@@ -144,7 +142,7 @@
    "outputs": [],
    "source": [
     "# Set up observer using our specified sampling times/locations\n",
-    "obs_l96 = observer.Observer(\n",
+    "obs_l96 = dab.observer.Observer(\n",
     "    l96, \n",
     "    time_indices = time_inds_l96, # Time indices to sample\n",
     "    location_indices = sys_inds_l96, # Location indices to sample\n",
@@ -179,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot it against the original values\n",
+    "# Plot observations against the original values\n",
     "fig, ax = plt.subplots()\n",
     "ax.plot(l96.times, l96.values[:, obs_vec_l96.location_indices[0, 0]], alpha=0.9)\n",
     "ax.plot(obs_vec_l96.times, obs_vec_l96.values[:, 0], '--', alpha=0.9)\n",
@@ -267,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aws = data.AWS()\n",
+    "aws = dab.data.AWS()\n",
     "aws.load()\n",
     "print('Time dim: ', aws.time_dim)\n",
     "print('System dim: ',aws.system_dim)\n",
@@ -295,7 +293,7 @@
    "outputs": [],
    "source": [
     "# Set up observer using our specified sampling times/locations\n",
-    "obs_aws = observer.Observer(\n",
+    "obs_aws = dab.observer.Observer(\n",
     "    aws, \n",
     "    time_indices = time_inds_aws, # Time indices to sample\n",
     "    location_indices = loc_inds_aws, # Location indices to sample\n",
@@ -390,7 +388,7 @@
    "outputs": [],
    "source": [
     "# Set up observer using our specified sampling times/locations\n",
-    "obs_aws_ns = observer.Observer(\n",
+    "obs_aws_ns = dab.observer.Observer(\n",
     "    aws, \n",
     "    time_density = 0.002,\n",
     "    location_density = 0.05,\n",
@@ -415,6 +413,158 @@
     "print('Number of locations at each timestep: ', obs_vec_aws_ns.obs_dims)\n",
     "print('Sampling location indices at first timestep: ', obs_vec_aws_ns.location_indices[0])\n",
     "print('Sampling location indices at last timestep: ', obs_vec_aws_ns.location_indices[-1])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc87936b-a6ef-4836-bedf-a43805417443",
+   "metadata": {},
+   "source": [
+    "# 6. Spectral Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a8f5bc1-0ada-464e-9f6d-182d29d9d3e5",
+   "metadata": {},
+   "source": [
+    "SQGTurb is a data generator that operates in spectral space, and so their state vector stores complex numbers with real and imaginary components. Fortunately, you can transform the data back into real space using an inverse Fourier Transform. The observer will handle this operation for you automatically, and so SQGTurb can be used with the observer in the same way as the other data generators. The main difference is that location_indices will have multiple indices per timestep, since they're specified in the original gridded dimension instead of the flattened state vector."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d34e0d7d-aaf4-4030-9c16-3af85e640e5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sqgturb = dab.data.SQGTurb()\n",
+    "sqgturb.generate(n_steps=50)\n",
+    "print('Complex state vector length: ', sqgturb.system_dim)\n",
+    "print('Original gridded dimension in real space: ', sqgturb.original_dim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94cd1356-9728-4b31-86c3-6ca5b9949a7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set up observer \n",
+    "obs_sqg = dab.observer.Observer(\n",
+    "    sqgturb, \n",
+    "    random_time_count = 50,\n",
+    "    random_location_count = 5,\n",
+    "    error_bias = 0.0,\n",
+    "    error_sd = 100.,\n",
+    "    stationary_observers=True\n",
+    ")\n",
+    "obs_vec_sqg = obs_sqg.observe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f9353d3-bd8e-4fde-bfa6-3f76f70a8646",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Sampling times: ', obs_vec_sqg.times)\n",
+    "print('Number of observations: ', obs_vec_sqg.num_obs)\n",
+    "print('Number of locations at each timestep: ', obs_vec_sqg.obs_dims[0])\n",
+    "print('Sampling location indices: ', obs_vec_sqg.location_indices[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d126893-5832-4f58-beed-e1eccc395ab0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's get the indices of the second sampled location:\n",
+    "print(obs_vec_sqg.location_indices[0, 2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a85d3eac-1c96-4cf1-a2b9-00100e0124cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualize\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(sqgturb.times, sqgturb.values_gridded[:, 1, 52, 79], alpha=0.9)\n",
+    "ax.plot(obs_vec_sqg.times, obs_vec_sqg.values[:, 2], '--', alpha=0.9)\n",
+    "ax.legend(labels=['Original System', 'Observations'])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a56b6fc5-19b6-40ce-bf46-e4f93c1f6b19",
+   "metadata": {},
+   "source": [
+    "# 7. Basic stationary observer with random sampling *by probability*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "107f509a-dc21-4c54-867a-5649a3389659",
+   "metadata": {},
+   "source": [
+    "If you'd prefer, you can also specify a probability that each timestep or location will be sampled using random_time_density and random_location_density. For example, if you specify random_time_density = 0.5, approximately 50% of time steps will be sampled (with the proability of each time step being selected for sampling following a Bernoulli distribution with p = random_time_density). All of the examples above can be modified to use this method instead, although the exact number of times and locations sampled will vary.\n",
+    "\n",
+    "NOTE: If used with stationary_observer=False, random_location_density will sample a DIFFERENT number of locations at each time step. For example, with system_dim=10 and random_location_density=0.5, it might sample 5 locations at the first timestep, 6 in the next, then 5 again, then 3, etc. It randomly selects locations at each timestep."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5117408a-b1a2-45c8-89b4-e44f9c447af1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l63 = dab.data.Lorenz63()\n",
+    "l63.generate(n_steps=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2c6567f-12ce-4428-a07d-d46928020610",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obs_l63_p = dab.observer.Observer(\n",
+    "    l63, \n",
+    "    random_time_density = 0.5, # Probability of picking each time step for random sampling\n",
+    "    random_location_density = 0.3, # Probability of picking each location in l63.system_dim for random sampling\n",
+    "    error_bias = 0.1,\n",
+    "    error_sd = 1.33\n",
+    ")\n",
+    "\n",
+    "# Making observations\n",
+    "obs_vec_l63_p = obs_l63_p.observe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfec9e66-e7ba-4e8f-a78a-e6140fd4f66d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's examine that object\n",
+    "print('Sampling times: ', obs_vec_l63_p.times) # 28 out of 50 timesteps are sampled\n",
+    "print('Number of observations: ', obs_vec_l63_p.num_obs)\n",
+    "# In this case, 2 values (out of a total system_dim of 3) are observed at each timestep.\n",
+    "print('Number of locations at each timestep: ', obs_vec_l63_p.obs_dims[0])\n",
+    "print('Sampling location indices: ', obs_vec_l63_p.location_indices[0])\n",
+    "print('Observation values: ', obs_vec_l63_p.values)\n",
+    "print('Errors: ', obs_vec_l63_p.errors)"
    ]
   }
  ],
