Set random seeds for hyperopt search

--- a/examples/da_cycler/Solvik_Penny_Hoyer_2024-Backprop4DVar/1A-Lorenz96-RayTune.ipynb
+++ b/examples/da_cycler/Solvik_Penny_Hoyer_2024-Backprop4DVar/1A-Lorenz96-RayTune.ipynb
@@ -271,8 +271,8 @@
     "                                                     obs_sd=0.5\n",
     "                                                     )\n",
     "    \n",
-    "    # Not running in parallel to get fairer time comparison against regular 4DVar\n",
-    "    hyperopt_search = HyperOptSearch(space, metric=\"rmse\", mode=\"min\")\n",
+    "    hyperopt_search = HyperOptSearch(space, metric=\"rmse\", mode=\"min\",\n",
+    "                                     random_state_seed=22+system_dim)\n",
     "    tuner = tune.Tuner(\n",
     "        trainable_with_system_dim,\n",
     "        tune_config=tune.TuneConfig(\n",
@@ -347,7 +347,8 @@
     "                                                         obs_sd=obs_sd\n",
     "                                                         )\n",
     "\n",
-    "        hyperopt_search = HyperOptSearch(space, metric=\"rmse\", mode=\"min\")\n",
+    "        hyperopt_search = HyperOptSearch(space, metric=\"rmse\", mode=\"min\",\n",
+    "                                         random_state_seed=22+obs_location_count)\n",
     "        tuner = tune.Tuner(\n",
     "            trainable_with_system_dim,\n",
     "            tune_config=tune.TuneConfig(\n",
