--- a/examples/da_cycler/Solvik_Penny_Hoyer_2024-Backprop4DVar/2A-PYQG-Jax-RayTune.ipynb
+++ b/examples/da_cycler/Solvik_Penny_Hoyer_2024-Backprop4DVar/2A-PYQG-Jax-RayTune.ipynb
@@ -290,17 +290,15 @@
     "        num_iters=num_iters\n",
     "    )\n",
     "    \n",
-    "    # Set CPU requirement to num cpus on your machine to NOT run in parallel\n",
-    "    # in order to get a better time comparison. Reduce this to run in parallel\n",
-    "    # and speed up the process.\n",
-    "    trainable_with_resources = tune.with_resources(trainable_with_system_dim, {\"cpu\": 16})\n",
-    "    hyperopt_search = HyperOptSearch(space, metric=\"rmse\", mode=\"min\")\n",
+    "    hyperopt_search = HyperOptSearch(space, metric=\"rmse\", mode=\"min\",\n",
+    "                                     random_state_seed=22+system_dim_xy)\n",
     "    \n",
     "    # Run tuner\n",
     "    tuner = tune.Tuner(\n",
-    "        trainable_with_resources,\n",
+    "        trainable_with_system_dim,\n",
     "        tune_config=tune.TuneConfig(\n",
     "            num_samples=50,\n",
+    "            max_concurrent_trials=4,\n",
     "            search_alg=hyperopt_search,\n",
     "        ),\n",
     "    )\n",
