Updated L96 paper runs

--- a/examples/da_cycler/Solvik_Penny_Hoyer_2024-Backprop4DVar/1A-Lorenz96-RayTune.ipynb
+++ b/examples/da_cycler/Solvik_Penny_Hoyer_2024-Backprop4DVar/1A-Lorenz96-RayTune.ipynb
@@ -245,7 +245,7 @@
    "source": [
     "# Define search space\n",
     "space = {\n",
-    "    \"lr\": hp.loguniform(\"lr\", -10, 0),\n",
+    "    \"lr\": hp.loguniform(\"lr\", -5, 0),\n",
     "    \"lr_decay\": hp.uniform(\"lr_decay\", 0.1, 0.99),\n",
     "}"
    ]
@@ -300,7 +300,7 @@
    "outputs": [],
    "source": [
     "full_results_df = pd.concat(all_results_df_list)\n",
-    "full_results_df.to_csv('./out/l96/raytune_l96_hessian_v4.csv')"
+    "full_results_df.to_csv('./out/l96/raytune_l96_hessian_v6.csv')"
    ]
   },
   {
@@ -338,7 +338,7 @@
     "obs_error_list = [0.1, 0.2, 0.3, 0.4, 0.5, 0.75, 1.0, 1.5, 2.0]\n",
     "\n",
     "for obs_location_count in num_obs_list:\n",
-    "    for obs_sd in obs_error_list:\n",
+    "    for obs_i, obs_sd in enumerate(obs_error_list):\n",
     "        tune_time_start = timer()\n",
     "        \n",
     "        trainable_with_system_dim = tune.with_parameters(train_backprop_4dvar, \n",
@@ -348,7 +348,7 @@
     "                                                         )\n",
     "\n",
     "        hyperopt_search = HyperOptSearch(space, metric=\"rmse\", mode=\"min\",\n",
-    "                                         random_state_seed=22+obs_location_count)\n",
+    "                                         random_state_seed=22+obs_location_count+obs_i)\n",
     "        tuner = tune.Tuner(\n",
     "            trainable_with_system_dim,\n",
     "            tune_config=tune.TuneConfig(\n",
@@ -378,7 +378,7 @@
    "outputs": [],
    "source": [
     "full_results_df = pd.concat(all_results_df_list)\n",
-    "full_results_df.to_csv('./out/l96/raytune_werrors_heatmap_hessian_v4_alldims_bigger_error.csv')"
+    "full_results_df.to_csv('./out/l96/raytune_werrors_heatmap_hessian_v5.csv')"
    ]
   }
  ],
