Updated QGS with seeded raytune

--- a/examples/da_cycler/Solvik_Penny_Hoyer_2024-Backprop4DVar/3A-QGS-RayTune.ipynb
+++ b/examples/da_cycler/Solvik_Penny_Hoyer_2024-Backprop4DVar/3A-QGS-RayTune.ipynb
@@ -28,6 +28,7 @@
     "import matplotlib.pyplot as plt\n",
     "from qgs.params.params import QgParams\n",
     "import pandas as pd\n",
+    "import os\n",
     "\n",
     "from ray import train, tune\n",
     "from hyperopt import hp\n",
@@ -53,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "random_seed=50\n",
+    "random_seed=55\n",
     "np_rng = np.random.default_rng(seed=random_seed)"
    ]
   },
@@ -99,7 +100,7 @@
    "outputs": [],
    "source": [
     "train_size = 100000\n",
-    "transient_size = 1000\n",
+    "transient_size = 10000\n",
     "valid_size = 10000\n",
     "test_size = 10000"
    ]
@@ -151,8 +152,7 @@
     "fig, axes = plt.subplots(6, 1, sharex = True, figsize = (10, 8))\n",
     "for j, ax in enumerate(axes):\n",
     "    ax.plot(nr_test.times, nr_test.values[:,j], lw = 3, label = 'Nature Run')\n",
-    "    ax.set_ylabel(r'$x_{:d}$'.format(j), fontsize = 16)\n",
-    "#     ax.set_xlim(54000, 55000)"
+    "    ax.set_ylabel(r'$x_{:d}$'.format(j), fontsize = 16)"
    ]
   },
   {
@@ -184,18 +184,6 @@
    "outputs": [],
    "source": [
     "# Now we can define the observer:\n",
-    "obs_qgs_test = dab.observer.Observer(\n",
-    "    nr_test, # Data generator object\n",
-    "    time_indices = np.arange(0, nr_test.time_dim, 3), # Observation every 5th timestep\n",
-    "    random_location_count = 10,\n",
-    "    error_bias = 0.0, \n",
-    "    error_sd = obs_sd, \n",
-    "    random_seed=93,\n",
-    "    stationary_observers=True,\n",
-    "    store_as_jax=False\n",
-    ")\n",
-    "\n",
-    "# Now we can define the observer:\n",
     "obs_qgs_valid = dab.observer.Observer(\n",
     "    nr_valid, # Data generator object\n",
     "    time_indices = np.arange(0, nr_valid.time_dim, 3), # Observation every 5th timestep\n",
@@ -208,8 +196,7 @@
     ")\n",
     "\n",
     "# Making observations\n",
-    "obs_vec_valid = obs_qgs_valid.observe()\n",
-    "obs_vec_test = obs_qgs_test.observe()"
+    "obs_vec_valid = obs_qgs_valid.observe()"
    ]
   },
   {
@@ -245,27 +232,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "898051a1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # # Train: Takes a few minutes\n",
-    "# forecast_model.weights_init()\n",
-    "# forecast_model.train(nr_train)\n",
-    "# forecast_model.save_weights('./out/qgs/rc_weights.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "2706449c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Shortcut: load the W_out weights from previous training\n",
+    "# Checks for presaved weights. If not present, trains RC model and saves weights\n",
     "weights_path = './out/qgs/rc_weights.pkl'\n",
-    "forecast_model.weights_init()\n",
-    "forecast_model.load_weights(weights_path)"
+    "if False: #os.path.isfile(weights_path):\n",
+    "    # Shortcut: Load previously trained weights\n",
+    "    forecast_model.weights_init()\n",
+    "    forecast_model.load_weights(weights_path)\n",
+    "else:\n",
+    "    # Train: Takes ~5 minutes\n",
+    "    forecast_model.weights_init()\n",
+    "    forecast_model.train(nr_train)\n",
+    "    forecast_model.save_weights(weights_path)"
    ]
   },
   {
@@ -377,7 +358,7 @@
    "outputs": [],
    "source": [
     "space = {\n",
-    "    \"lr\": hp.loguniform(\"lr\", -10, 0),\n",
+    "    \"lr\": hp.loguniform(\"lr\", -5, 0),\n",
     "    \"lr_decay\": hp.uniform(\"lr_decay\", 0.1, 0.99),\n",
     "}\n",
     "num_iters = 3"
@@ -411,7 +392,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hyperopt_search = HyperOptSearch(space, metric=\"rmse\", mode=\"min\")\n",
+    "hyperopt_search = HyperOptSearch(space, metric=\"rmse\", mode=\"min\",\n",
+    "                                 random_state_seed=random_seed)\n",
     "tuner = tune.Tuner(\n",
     "    trainable_w_num_iters,\n",
     "    tune_config=tune.TuneConfig(\n",
@@ -434,7 +416,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cur_results_df.to_csv('./out/qgs/raytune_qgs_v4_hessian.csv')"
+    "cur_results_df.to_csv('./out/qgs/raytune_qgs_v12_hessian.csv')"
    ]
   }
  ],
