Revert "Draft of simple raytune L96 example"
This reverts commit 2fef4d03700346ee2b7689565ce139f36e395664.

--- a/examples/da_cycler/Solvik_Penny_Hoyer_2024-Backprop4DVar/2A-PYQG-Jax-RayTune.ipynb
+++ b/examples/da_cycler/Solvik_Penny_Hoyer_2024-Backprop4DVar/2A-PYQG-Jax-RayTune.ipynb
@@ -236,7 +236,7 @@
    "outputs": [],
    "source": [
     "space = {\n",
-    "    \"lr\": hp.loguniform(\"lr\", -5, 0),\n",
+    "    \"lr\": hp.loguniform(\"lr\", -10, 0),\n",
     "    \"lr_decay\": hp.uniform(\"lr_decay\", 0.1, 0.99),\n",
     "}\n",
     "\n"
@@ -290,15 +290,17 @@
     "        num_iters=num_iters\n",
     "    )\n",
     "    \n",
-    "    hyperopt_search = HyperOptSearch(space, metric=\"rmse\", mode=\"min\",\n",
-    "                                     random_state_seed=22+system_dim_xy)\n",
+    "    # Set CPU requirement to num cpus on your machine to NOT run in parallel\n",
+    "    # in order to get a better time comparison. Reduce this to run in parallel\n",
+    "    # and speed up the process.\n",
+    "    trainable_with_resources = tune.with_resources(trainable_with_system_dim, {\"cpu\": 16})\n",
+    "    hyperopt_search = HyperOptSearch(space, metric=\"rmse\", mode=\"min\")\n",
     "    \n",
     "    # Run tuner\n",
     "    tuner = tune.Tuner(\n",
-    "        trainable_with_system_dim,\n",
+    "        trainable_with_resources,\n",
     "        tune_config=tune.TuneConfig(\n",
     "            num_samples=50,\n",
-    "            max_concurrent_trials=4,\n",
     "            search_alg=hyperopt_search,\n",
     "        ),\n",
     "    )\n",
@@ -323,7 +325,7 @@
    "outputs": [],
    "source": [
     "full_results_df = pd.concat(all_results_df_list)\n",
-    "full_results_df.to_csv('./out/pyqg_jax/pyqg_jax_raytune_sgdopt_werrors_v15_hessian_approx_3epochs_system_dims_16_24_32_smallsearch.csv')"
+    "full_results_df.to_csv('./out/pyqg_jax/pyqg_jax_raytune_sgdopt_werrors_v13_hessian_approx_3epochs_system_dims_16_24_32.csv')"
    ]
   }
  ],
