--- a/examples/da_cycler/Solvik_Penny_Hoyer_2024-Backprop4DVar/1B-Lorenz96-FullRun.ipynb
+++ b/examples/da_cycler/Solvik_Penny_Hoyer_2024-Backprop4DVar/1B-Lorenz96-FullRun.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raytune_system_dim_results = pd.read_csv('./out/l96/raytune_l96_hessian_v6.csv')\n",
+    "raytune_system_dim_results = pd.read_csv('./out/l96/raytune_l96_hessian_v4.csv')\n",
     "raytune_system_dim_results['trialnum'] = raytune_system_dim_results.index\n",
     "raytune_system_dim_results.index = np.arange(raytune_system_dim_results.shape[0])\n",
     "rows_to_get = raytune_system_dim_results.groupby(['system_dim']).idxmin(numeric_only=True)['rmse']\n",
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raytune_heatmap_results = pd.read_csv('./out/l96/raytune_werrors_heatmap_hessian_v5.csv')\n",
+    "raytune_heatmap_results = pd.read_csv('./out/l96/raytune_werrors_heatmap_hessian_v4_alldims_bigger_error.csv')\n",
     "raytune_heatmap_results['trialnum'] = raytune_heatmap_results.index\n",
     "raytune_heatmap_results.index = np.arange(raytune_heatmap_results.shape[0])\n",
     "rows_to_get = raytune_heatmap_results.groupby(['num_obs','obs_sd']).idxmin(numeric_only=True)['rmse']\n",
@@ -182,7 +182,7 @@
     "        B=B,\n",
     "        R=R,\n",
     "        num_iters=num_iters,\n",
-    "        loss_growth_limit=100,\n",
+    "        loss_growth_limit=5,\n",
     "        learning_rate=learning_rate,\n",
     "        lr_decay=lr_decay,\n",
     "        model_obj=fc_model,\n",
@@ -463,7 +463,7 @@
     "        out_dict_list_bp.append(run_dict)\n",
     "        \n",
     "bp_df_time =  pd.DataFrame(out_dict_list_bp)\n",
-    "bp_df_time.to_csv('./out/l96/bp_df_time_v34_withraytune_hessian_iters3_val.csv')"
+    "bp_df_time.to_csv('./out/l96/bp_df_time_v33_withraytune_hessian_iters3_val.csv')"
    ]
   },
   {
@@ -538,7 +538,7 @@
     "system_dim = 36\n",
     "random_seed = system_dim\n",
     "num_obs_list = [6, 12, 18, 24, 30, 36]\n",
-    "obs_error_list = [0.1, 0.2, 0.3, 0.4, 0.5, 0.75, 1.0, 1.5, 2.0]\n",
+    "obs_error_list = np.arange(0.1, 1.05, 0.1)\n",
     "\n",
     "for obs_location_count in num_obs_list:\n",
     "    for obs_sd in obs_error_list:\n",
@@ -579,7 +579,7 @@
     "            out_dict_list_bp_obs.append(run_dict)\n",
     "            \n",
     "bp_df_obs =  pd.DataFrame(out_dict_list_bp_obs)\n",
-    "bp_df_obs.to_csv('./out/l96/bp_df_obs_v34_hessian_raytune_alldims_val.csv')"
+    "bp_df_obs.to_csv('./out/l96/bp_df_obs_v33_hessian_raytune_alldims_val.csv')"
    ]
   },
   {
@@ -714,17 +714,7 @@
     "        out_dict_list_bp.append(run_dict)\n",
     "        \n",
     "bp_df_time =  pd.DataFrame(out_dict_list_bp)\n",
-    "bp_df_time.to_csv('./out/l96/bp_df_time_v35_withraytune_hessian_iters3_test_newtune.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a19d281d-9cf3-4cf1-8bcc-5ea48daa230e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bp_df_time.groupby(['system_dim'])['rmse'].mean()"
+    "bp_df_time.to_csv('./out/l96/bp_df_time_v33_withraytune_hessian_iters3_test.py')"
    ]
   },
   {
@@ -769,7 +759,7 @@
     "        out_dict_list_4dvar.append(run_dict)\n",
     "        \n",
     "var4d_df_time =  pd.DataFrame(out_dict_list_4dvar)\n",
-    "var4d_df_time.to_csv('./out/l96/var4d_df_time_v35_3outer_test.csv')"
+    "var4d_df_time.to_csv('./out/l96/var4d_df_time_v33_3outer_test.csv')"
    ]
   },
   {
@@ -793,7 +783,7 @@
     "system_dim = 36\n",
     "num_obs_list = [6, 12, 18, 24, 30, 36]\n",
     "obs_error_list = [0.1, 0.2, 0.3, 0.4, 0.5, 0.75, 1.0, 1.5, 2.0]\n",
-    "out_csv = './out/l96/bp_df_obs_v35_hessian_raytune_30runs_test.csv'\n",
+    "out_csv = './out/l96/bp_df_obs_v34_hessian_raytune_30runs_test.csv'\n",
     "\n",
     "for obs_location_count in num_obs_list:\n",
     "    for obs_sd in obs_error_list:\n",
@@ -1066,7 +1056,7 @@
     "print(obs_location_count, obs_sd, error_bp)\n",
     "\n",
     "# Write statevecs\n",
-    "out_file = './out/l96/l96_bp_results_18obs_36dim_sd04_v2.pkl'\n",
+    "out_file = './out/l96/l96_bp_results_18obs_36dim_sd04_v1.pkl'\n",
     "with open(out_file, 'wb') as f:  \n",
     "     pickle.dump(out_bp, f) \n",
     "f.close()"
