--- a/examples/da_cycler/Solvik_Penny_Hoyer_2024-Backprop4DVar/3B-QGS-FullRun.ipynb
+++ b/examples/da_cycler/Solvik_Penny_Hoyer_2024-Backprop4DVar/3B-QGS-FullRun.ipynb
@@ -5,7 +5,7 @@
    "id": "3d3c2aaa",
    "metadata": {},
    "source": [
-    "# 5. Example: 4DVar Backprop DA using Reservoir Computing ML Model on QGS Model - Full Run"
+    "# Example: 4DVar Backprop DA using Reservoir Computing ML Model on QGS Model - Full Run"
    ]
   },
   {
