Fix name of qgs raytune

--- a/examples/da_cycler/Solvik_Penny_Hoyer_2024-Backprop4DVar/3A-QGS-RayTune.ipynb
+++ b/examples/da_cycler/Solvik_Penny_Hoyer_2024-Backprop4DVar/3A-QGS-RayTune.ipynb
@@ -5,7 +5,7 @@
    "id": "3d3c2aaa",
    "metadata": {},
    "source": [
-    "# 5. Example: 4DVar Backprop DA using Reservoir Computing ML Model on QGS Model - RayTune for HyperParams"
+    "# Example: 4DVar Backprop DA using Reservoir Computing ML Model on QGS Model - RayTune for HyperParams"
    ]
   },
   {
